Fix overlapping issue

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -58,7 +58,6 @@ main {
 #master-section {
   text-align: center;
   min-height: 50vh;
-  max-height: 512px;
   h1 {
     color: #4a86cf;
     font-weight: normal;
